--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -9,7 +9,7 @@
         </mat-select>
     </mat-form-field>
 
-    <mat-accordion multi>
+    <mat-accordion multi="false">
 
 
         <!-- MENU -->
