--- a/src/app/components/toolbar/toolbar.component.css
+++ b/src/app/components/toolbar/toolbar.component.css
@@ -1,11 +1,12 @@
 .mat-toolbar {
   font-family: system-ui;
-  background-color: darkorange;
+  background-color: #1dbd40;
   color: white;
   font-weight: 300;
 }
 
 .example-spacer {
+  color: black;
   /* Tres valores: flex-grow | flex-shrink | flex-basis */
   flex: 1 1 auto;
 }
@@ -23,7 +24,7 @@
   line-height: normal;
 }
 
-.saturno-logo {
-  width: 7em;
+img {
+  max-width:100%;
+max-height:100%;
 }
-
