--- a/src/app/modules/public/myticket/myticket.component.html
+++ b/src/app/modules/public/myticket/myticket.component.html
@@ -1,7 +1,7 @@
 <!-- ======================================================== -->
 <!-- TICKETS SCREEN -->
 <!-- ======================================================== -->
-<div class="saturno-myticket-background">
+<div class="saturno-bg-tile-1 h-100">
     <div class="saturno-card m-0">
 
         <!------------------------------>
