--- a/src/app/modules/public/search/search.component.html
+++ b/src/app/modules/public/search/search.component.html
@@ -1,4 +1,4 @@
-<div class="saturno-card shadow-box animated fadeIn">
+<div class="saturno-card saturno-bg-white shadow-box animated fadeIn">
 
     <div *ngIf="!companySelected" class="jumbotron text-dark">
         
@@ -47,7 +47,9 @@
             {{companySelected.tx_company_name}}
         </button>
     </div>
+
     <div style="cursor: pointer;" routerLink="/">
         Volver al inicio
     </div>
+    
 </div>
