--- a/src/app/modules/public/tickets/tickets.component.html
+++ b/src/app/modules/public/tickets/tickets.component.html
@@ -47,11 +47,16 @@
         </div>
       </div>
 
-      <button *ngFor="let skill of skills" class="btn btn-primary btn-block btn-lg skill-button text-uppercase"
+      <button *ngFor="let skill of skills" class="btn btn-primary btn-block btn-lg rounded-0 text-uppercase"
         (click)="createTicket(skill._id, false)">
         {{skill.tx_skill}}
       </button>
-
+      
+      
+      <button class="btn btn-danger btn-block btn-lg rounded-0 text-uppercase"
+        (click)="salir()">
+        Salir
+      </button>
 
 </div>
 
