--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,11 +1,11 @@
 <!-- WELCOME -->
-<div class="saturno-container saturno-bg-home container-fluid">
+<div class="saturno-bg-home container-fluid">
 
   <div class="row">
     <div class="col-md"></div>
     <div class="col-md">
 
-      <div class="saturno-card rounded animated fadeIn">
+      <div class="saturno-card saturno-bg-white-9 rounded animated fadeIn">
         <!-- <span style="font-size: small;color:gray">{{date}}</span> -->
 
 
@@ -39,7 +39,6 @@
               <span class="mdi mdi-nodejs footer-icon ml-1"></span>
             </div>
           </div>
-
         </div>
 
 
@@ -49,11 +48,15 @@
   </div>
 </div>
 
+
+<!-- ======================================================== -->
 <!-- MINI CARDS -->
-<div class="container-fluid row justify-content-center">
+<!-- ======================================================== -->
+
+<div class="container-fluid row py-3 animated fadeIn justify-content-center">
 
   <!-- como funciona? -->
-  <div class="col-sm-6 col-md-4 col-lg-3 p-2">
+  <div class="col-sm-6 col-md-4 col-lg-3 p-4">
     <div class="saturno-minicard shadow-box" routerLink="/howworks">
       <div class="saturno-minicard-title">
         <div>
@@ -69,8 +72,9 @@
       </div>
     </div>
   </div>
+
   <!-- registrar comercio -->
-  <div class="col-sm-6 col-md-4 col-lg-3 p-2">
+  <div class="col-sm-6 col-md-4 col-lg-3 p-4">
     <div class="saturno-minicard shadow-box" routerLink="/register">
       <div class="saturno-minicard-title">
         <div>
@@ -87,7 +91,7 @@
     </div>
   </div>
   <!-- registrar contacto -->
-  <div class="col-sm-6 col-md-4 col-lg-3 p-2">
+  <div class="col-sm-6 col-md-4 col-lg-3 p-4">
     <div class="saturno-minicard shadow-box" routerLink="/contact">
       <div class="saturno-minicard-title">
         <div>
@@ -104,7 +108,7 @@
     </div>
   </div>
   <!-- buscar comercio -->
-  <div class="col-sm-6 col-md-4 col-lg-3 p-2">
+  <div class="col-sm-6 col-md-4 col-lg-3 p-4">
     <div class="saturno-minicard shadow-box" routerLink="/public/search">
       <div class="saturno-minicard-title">
         <div>
